Slight changes to make my potfolio better

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
     <section id="about" class="about">
         <div class="about-content">
-        <img src="https://via.placeholder.com/150" alt="Profile Picture">
+        <img src="https://via.placeholder.com/150" alt="Bright Profile Picture">
         <div>
             <h2>Hello, I'm Tony</h2>
-            <p>I’m a web developer passionate about building interactive and user-friendly applications.</p>
+            <h3>I’m a web developer passionate about building interactive and user-friendly applications.</h3>
         </div>
         </div>
     </section>
@@ -35,15 +35,15 @@
     <section id="projects" class="projects">
         <h2>Projects</h2>
         <div class="project-list">
-        <div class="project1">Project 1</div>
-        <div class="project1">Project 2</div>
-        <div class="project1">Project 3</div>
+        <div class="project1">Tatu Supermarket Website</div>
+        <div class="project1">Personal Portfolio</div>
+        <div class="project1">Group Project</div>
         </div>
     </section>
 
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:tony@example.com">tony@example.com</a></p>
+        <p>Email: <a href="mailto:brightonwandera04@gmail.com">brightonwandera04@gmail.com</a></p>
     </section>
 </body>
 </html>
